welcome.lessons.welcome.bdr.BDR.scala.code
avr fini:Booleen = false
while (!fini) {
  avance()
} 